[gd_scene load_steps=8 format=1]

[ext_resource path="res://Levels/Tutorial/GenderSelect.gd" type="Script" id=1]
[ext_resource path="res://Tileset/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/BathroomDoors.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/DialogBox.tscn" type="PackedScene" id=5]

[sub_resource type="CanvasItemShader" id=1]

_code = {
"fragment": "uniform color output_color = vec4(0,0,0,1); //target color

vec4 col = tex(TEXTURE,UV); //current color of pixel
COLOR = color(output_color.rgb * col.g, col.a);",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/output_color = Color( 0, 0, 0, 1 )

[node name="GenderSelect" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]

transform/pos = Vector2( 95.0469, 46.1049 )
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -2, 6, -1, 5, -65536, 5, -65535, 5, -65534, 5, -65533, 24, -65532, 24, -65531, 24, -65530, 5, -65529, 5, -65528, 11, 65534, 0, 65535, 24, 0, 24, 1, 24, 2, 24, 3, 24, 4, 24, 5, 24, 6, 24, 7, 24, 8, 15, 131070, 0, 131071, 24, 65536, 24, 65537, 24, 65538, 24, 65539, 24, 65540, 24, 65541, 24, 65542, 24, 65543, 24, 65544, 15, 196606, 0, 196607, 24, 131072, 24, 131073, 24, 131074, 24, 131075, 24, 131076, 24, 131077, 24, 131078, 24, 131079, 24, 131080, 15, 262142, 0, 262143, 24, 196608, 24, 196609, 24, 196610, 24, 196611, 24, 196612, 24, 196613, 24, 196614, 24, 196615, 24, 196616, 15, 327678, 0, 327679, 24, 262144, 24, 262145, 24, 262146, 24, 262147, 24, 262148, 24, 262149, 24, 262150, 24, 262151, 24, 262152, 15, 393214, 0, 393215, 24, 327680, 24, 327681, 24, 327682, 24, 327683, 24, 327684, 24, 327685, 24, 327686, 24, 327687, 24, 327688, 15, 458750, 1, 458751, 10, 393216, 10, 393217, 10, 393218, 10, 393219, 10, 393220, 10, 393221, 10, 393222, 10, 393223, 10, 393224, 16 )

[node name="Player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 334.874, 242.99 )
z/z = 1
collision/layers = 3

[node name="Sprite" parent="Player"]

material/material = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -64
limit/top = -64
limit/right = 800
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 4.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="BathroomDoors" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 390, 30 )
transform/scale = Vector2( 1.57812, 1.34375 )
collision/mask = 3

[node name="Dialog" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="DialogBox" parent="Dialog" instance=ExtResource( 5 )]

transform/pos = Vector2( 10, 410 )
z/z = 1

[connection signal="activeText" from="." to="Player" method="_on_activeText"]

[connection signal="textDone" from="." to="Player" method="_on_GenderSelect_textDone"]

[connection signal="mens_door" from="BathroomDoors" to="." method="_on_BathroomDoors_mens_door"]

[connection signal="womens_door" from="BathroomDoors" to="." method="_on_BathroomDoors_womens_door"]

[connection signal="dialog_end" from="Dialog/DialogBox" to="." method="_on_DialogBox_dialog_end"]

[connection signal="dialog_finished" from="Dialog/DialogBox" to="." method="_on_DialogBox_dialog_finished"]


[editable path="Player"]
